--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -28,12 +28,12 @@
     }
 
     img {
-      padding: var(--spacing);
+      /*padding: var(--spacing);*/
       background: var(--base);
       filter: blur(var(--blur));
     }
 
-    h1 {
+    hl {
       color: var(--base);
     }
 
