Geolocation based Speedometer and Compass

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -115,7 +115,7 @@
     // 7. sort Exercise
     // Sort the people alphabetically by last name
     const alpha = people.sort((lastOne, nextOne) =>{
-        const [aLast, aFirst] = lastOne.split(', ');
+        const [aLast, aFigit rst] = lastOne.split(', ');
         const [bLast, bFirst] = nextOne.split(', ');
         return aLast > bLast ? 1 : -1;
     });
